--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,4 @@
 RewriteEngine On
 RewriteCond %{HTTPS} off
-RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
+RewriteRule ^(.*)$ https://%{yototplayz1}%{yototplayz} [L,R=301]
 RewriteRule ^([a-zA-Z0-9-_/]+)$ index.php [QSA]
